--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h1 {
 
 .account a {
     border: none;
-    background-color: white;
+    background-color: transparent;
     text-decoration: none;
     color: #2f89fc;
     font-size: 16px;
